# dex-trading-agent

./: .dockerignore  .env.example  .gitignore  .vercelignore  BUILD.md  CONVEX_REMOVAL.md  DEPLOYMENT.md  Debug.md  Dockerfile  Dockerfile.dev  LICENSE  MEMORY.md  MIGRATION.md  MIGRATION_ROADMAP.md  MIGRATION_TODO.md  PROJECT_COMPLETION.md  README.Docker.md  README.TESTING.md  README.md  README_QT.md  RELEASE_GUIDE.md  ` is used to **extract JSON content from a Markdown code block**.  `.env.example  `.env.example`  bash  docker-compose.dev.yml  docker-compose.yml  env.example  env.example`  index.html  json  main.js  markdown  package-lock.json  package.json  pnpm-lock.yaml  python  render.yaml  start.bat  start.sh  (+12 more)
.agent/workflows/: architecture.md
.devin/: wiki.json
.github/workflows/: release.yml
Documentation/: Checklists.md  Feedback_Loops.md  Milestones.md  README.md  Workflow.md
Documentation/API Reference/: FRONTEND_API_CLIENT.md  HYPERLIQUID_INTEGRATION.md  OPENROUTER_AI_API.md  PYTHON_BACKEND_API.md
Documentation/Architecture/: DATA_FLOW.md  NO_AUTH_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  TECHNOLOGY_STACK.md
Documentation/Deployment/: DOCKER_SETUP.md  ENVIRONMENT_VARIABLES.md  LOCAL_DEVELOPMENT.md  PRODUCTION_DEPLOYMENT.md
Documentation/Guides/: API_KEY_SETUP.md  GETTING_STARTED.md  TRADING_MODES.md  TROUBLESHOOTING.md
Documentation/Trading/: AI_ANALYSIS_ENGINE.md  PAPER_TRADING_ENGINE.md  POSITION_MANAGEMENT.md  RISK_MANAGEMENT.md  TRADING_ALGORITHMS.md
Documentation_Archive/Documentation/: Roadmap.md
json\\n([\\s\\S]+?)\\n```/: );
migration_python/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.restored  NO_AUTH_ARCHITECTURE.md  README.md  main.py  requirements.txt  startup.sh
migration_python/api/: routes.py  websocket.py
migration_python/database/: __init__.py  schema.py
migration_python/services/: __init__.py  backtesting_service.py  chart_snapshot_service.py  crypto_news_service.py  hyperliquid_service.py  market_data_service.py  paper_trading_service.py  price_stream_service.py  trading_service.py
migration_python/tests/: __init__.py  test_agent_integration.py  test_market_data_service.py  (+1 more)
native/: Cargo.toml
native/crates/ai-providers/: Cargo.toml
native/crates/ai-providers/src/: cline.rs  error.rs  kilo.rs  lib.rs  openrouter.rs  registry.rs
native/crates/ai-providers/tests/: registry.rs
native/crates/app-core/: Cargo.toml
native/crates/app-core/src/: lib.rs
native/crates/app-core/tests/: execute_live.rs  hyperliquid_account.rs  hyperliquid_execution.rs  risk_preflight.rs
native/crates/exchange-hyperliquid/: Cargo.toml
native/crates/exchange-hyperliquid/src/: account.rs  execution.rs  lib.rs  rest.rs  ws.rs
native/crates/exchange-hyperliquid/tests/: account_parse.rs  request_signing.rs  rest_request.rs  ws_subscription.rs
native/crates/exchange-hyperliquid/tests/fixtures/: account_info.json
native/crates/market-data/: Cargo.toml
native/crates/market-data/src/: historical_data_service.rs  http_client.rs  lib.rs  market_snapshot_service.rs  ws_client.rs
native/crates/market-data/tests/: historical_data_contract.rs
native/crates/paper-trading/: Cargo.toml
native/crates/paper-trading/src/: engine.rs  error.rs  lib.rs
native/crates/paper-trading/tests/: engine.rs
native/crates/ui-shell/: Cargo.toml  build.rs  resources.qrc
native/crates/ui-shell/cpp/: qt6_ffi.cpp
native/crates/ui-shell/qml/: Main.qml  SettingsView.qml  TradingView.qml  WalletView.qml
native/crates/ui-shell/src/: error.rs  lib.rs  main.rs  qt6_ffi.rs
scripts/: docker-restart.sh  docker-start.sh  docker-stop.sh
src/: index.css  instrumentation.js  instrumentation.tsx  main.js  main.tsx  vite-env.d.ts
src-qt/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_keys.rs  mod.rs
(+171 files in other folders)
