[package]
name = "ai-providers"
version = "0.1.0"
edition = "2021"
description = "AI provider registry for trading analysis"

[dependencies]
# Domain types
domain = { path = "../domain" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Health tracking
chrono = { version = "0.4", features = ["serde"] }
