[package]
name = "exchange-hyperliquid"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
ethers-core = "2"
ethers-signers = "2"
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
