[package]
name = "market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
