[package]
name = "paper-trading"
version = "0.1.0"
edition = "2021"
description = "Paper trading engine for simulated trading"

[dependencies]
# Domain types
domain = { path = "../domain" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }
